    * 0449 Show all custom variables of hosts and services in the detail views...
    * 0665 Added mail notificaton method to custom user notification dialog...
    * 0123 New time range filter for Downtimes and Comments...
    * 0683 New column painter for the last time a service was OK...
    * 0561 quicksearch: now able to search with multiple filters...
    * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
    * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
    * 0307 FIX: Increased performance of multisite GUI with a large userbase...
    * 0312 FIX: Hiding views related to not existing datasources, like the EC now...
    * 0325 FIX: Removed CSV export icon from availability views...
    * 0327 FIX: Most forms did now work with "Profile Requests" enabled...
    * 0333 FIX: Fixed too long page title during performing several actions...
    * 0356 FIX: Fixed exception caused by utf8 chars in tooltip text...
    * 0368 FIX: Generating selection id is hopefully now compatible to more systems...
    * 0374 FIX: Fixed syntax error in exception handler of LDAP search code...
    * 0375 FIX: LDAP: Now handling user-ids with umlauts...
    * 0246 FIX: brocade_fcport: fixed error in pnp-template...
    * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
    * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
    * 0436 FIX: Fix broken Site status switching via sidebar snapin...
    * 0420 FIX: LDAP: Roles/Groups are now synced even if case of DNs do not match...
    * 0421 FIX: UserDB: Fixed lost passwords when changing users in large user databases...
    * 0423 FIX: Users are not logged out anymore during changing their own passwords...
    * 0424 FIX: Improved error handling in case of incorrect auth config in distributed WATO environments