@@ -72,9 +72,10 @@ except:
 
 # Global table of available permissions. Plugins may add their own
 # permissions by calling declare_permission()
-permissions_by_name  = {}
-permissions_by_order = []
-permission_sections  = {}
+permissions_by_name              = {}
+permissions_by_order             = []
+permission_sections              = {}
+permission_declaration_functions = []
 
 # Constants for BI
 ALL_HOSTS = '(.*)'
@@ -183,6 +184,21 @@ def declare_permission_section(name, title, prio = 0, do_sort = False):
     # Prio can be a number which is used for sorting. Higher numbers will
     # be listed first, e.g. in the edit dialogs
     permission_sections[name] = (prio, title, do_sort)
+
+# Some module have a non-fixed list of permissions. For example for
+# each user defined view there is also a permission. This list is
+# not known at the time of the loading of the module - though. For
+# that purpose module can register functions. These functions should
+# just call declare_permission(). They are being called in the correct
+# situations.
+def declare_dynamic_permissions(func):
+    permission_declaration_functions.append(func)
+
+# This function needs to be called by all code that needs access
+# to possible dynamic permissions
+def load_dynamic_permissions():
+    for func in permission_declaration_functions:
+        func()
 
 # Compute permissions for HTTP user and set in
 # global variables. Also store user.
