@@ -227,6 +227,7 @@
     * 0123 New time range filter for Downtimes and Comments...
     * 0683 New column painter for the last time a service was OK...
     * 0561 quicksearch: now able to search with multiple filters...
+    * 0748 Also custom views now have permissions...
     * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
     * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
     * 0307 FIX: Increased performance of multisite GUI with a large userbase...
